<resources>
    <string name="app_name">Lesson 4</string>
    <string name="log_in">Log in</string>
    <string name="enter_user_name">Enter user name ...</string>
    <string name="enter_password">Enter password ...</string>
    <string name="bt_log_in">Log in</string>
    <string name="you_don_t_have_account">You don\'t have account?</string>
    <string name="sign_up">Sign up ?</string>
    <string name="create_an_new_account">Create an new account !</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="user_name">User name...</string>
    <string name="password">Password...</string>
    <string name="confirm_password">Confirm password...</string>
    <string name="bt_sign_up">Sign up</string>
    <string name="tv_log_in">Log in ?</string>
</resources>
