<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Main2Activity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/create_an_new_account"
        android:textSize="35sp"
        android:gravity="center"
        android:layout_marginTop="50dp" />

    <EditText
        android:id="@+id/edtUserNameSignUp"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:gravity="fill"
        android:hint="@string/user_name"
        android:inputType="text"
        android:textSize="18sp"
        android:autofillHints="" tools:targetApi="o"/>

    <EditText
        android:id="@+id/edtPasswordSignUp"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:gravity="fill"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="18sp"
        android:autofillHints="" tools:targetApi="o"/>

    <EditText
        android:id="@+id/edtConfPassSignUp"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:gravity="fill"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textSize="18sp"
        android:autofillHints="" tools:targetApi="o"/>

    <Button
        android:id="@+id/btSignUp"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="#84BCE9"
        android:text="@string/bt_sign_up"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:text="@string/already_have_an_account"
            android:gravity="center"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tvLogInSignUp"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:gravity="center"
            android:text="@string/tv_log_in"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#306F33"
            android:textSize="19sp" />

    </LinearLayout>


</LinearLayout>